Cleanup PCEPTopologySessionListenerTest
Restructure a builder and use List.of() instead of Lists and
Collections.

Change-Id: Ieda2c92034c95c7f06c2f39ba49098d10f129c5e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 695646e0543401be48718947a15e553d3b2a16b3)